--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
                         <img src="img/logo.svg" alt="" class="logo__img">
                     </a>
                     <nav class="menu">
+                        <button class="menu__btn">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </button>
                         <ul class="menu__list">
                             <li class="menu__list-item"><a href="new-cars.html" class="menu__list-link">NEW CARS</a></li>
                             <li class="menu__list-item"><a href="#" class="menu__list-link">PRE-OWNED CARS</a></li>
